feat: simular sqs para /import
